# ParaCraftSDK

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CreateApp.bat  CreateParaCraftMod.bat  INSTALL  LICENSE  ParacraftSDK.VC.db  ParacraftSDK.sln  Publish.bat  README.md  Start.bat  UpdatePackages.bat  UpdatePackages.sh  Upgrade.bat  index.html  log.txt  params.json  使用说明.txt
.github/: FUNDING.yml
NPLRuntime/: .gitignore  LICENSE  install.bat  install_src.bat  make_link.bat  readme.md  reg_env_path.lua
NPLRuntime/temp/: main_temp.bat
_apps/Paracraft/: .gitignore  CMakeLists.txt  Paracraft.nsi  README.md  Run.bat  Run.peworld
_apps/Paracraft/config/: commands.xml
_apps/Paracraft/proj.android/: AndroidManifest.xml  CreateMyReleaseKey.bat  MakeAndroidAPK.bat  README.txt  SignAPK.bat  SyncFiles.bat
_apps/Taurus/: .gitignore  CMakeLists.txt  Run.bat  SyncScript.bat  config.txt
_mod/MCImporterGenerator/: MCImporterGenerator.sln  MCImporterGenerator.vcxproj  Run.bat  readme.txt
_mod/MCImporterGenerator/Mod/MCImporterGenerator/: MCImporterChunkGenerator.lua  main.lua
_mod/STLExporter/: README.md  Run.bat
_mod/STLExporter/Mod/STLExporter/: BMaxModel.lua  BMaxNode.lua  BlockCommon.lua  BlockModel.lua  STLWriter.lua  main.lua
_mod/Test/: CMakeLists.txt  ModProject.csproj  README.md  Run.bat
_mod/Test/Mod/Test/: DemoCommand.lua  DemoEntity.lua  DemoGUI.html  DemoGUI.lua  DemoItem.lua  DemoSceneContext.lua  main.lua
apps/11/: Run.bat
apps/demo/: Run.bat
apps/lipeng/: Run.bat
apps/test/: Run.bat
apps/test/source/test/: main.lua
modDev/Sample/: Run.bat
modDev/Sample/Mod/Sample/: main.lua
modDev/Test/: Run.bat
proj.vs/: ParacraftRoot.sln
proj.vs/_apps/Haqi/: Haqi.sln  Haqi.vcxproj  Haqi.vcxproj.filters
proj.vs/_apps/HaqiTeen/: HaqiTeen.sln  HaqiTeen.vcxproj  HaqiTeen.vcxproj.filters
proj.vs/_apps/SeerCraft/: SeerCraft.sln  SeerCraft.vcxproj  SeerCraft.vcxproj.filters
proj.vs/_apps/Taurus/: Taurus.sln  Taurus.vcxproj  Taurus.vcxproj.filters
proj.vs/_apps/Test/: Test.sln  Test.vcxproj  Test.vcxproj.filters
proj.vs/_mod/Test/: ModTest.sln  ModTest.vcxproj  ModTest.vcxproj.filters
proj.vs/samples/1. HelloWorld/: HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters
proj.vs/samples/2. HelloWorldMCML/: HelloWorldMCML.sln  HelloWorldMCML.vcxproj  HelloWorldMCML.vcxproj.filters
proj.vs/samples/3. SampleWorld/: SampleWorld.sln  SampleWorld.vcxproj  SampleWorld.vcxproj.filters
proj.vs/samples/4. SimpleWebServer/: SimpleWebServer.sln  SimpleWebServer.vcxproj  SimpleWebServer.vcxproj.filters
proj.vs/samples/5. NPLWebServer/: NPLWebServer.sln  NPLWebServer.vcxproj  NPLWebServer.vcxproj.filters
proj.vs/samples/MyAppExe/: MyApp.sln  MyApp.vcxproj  MyApp.vcxproj.filters
proj.vs/samples/mod/Sample/: SampleMod.sln  SampleMod.vcxproj  SampleMod.vcxproj.filters
proj.vs/samples/plugins/HelloWorldCppDll/: HelloWorldPlugin.sln  HelloWorldPlugin.vcxproj  HelloWorldPlugin.vcxproj.filters
redist/: config.txt
samples/: .gitignore
samples/1. HelloWorld/: CMakeLists.txt  Run.bat
samples/1. HelloWorld/mods/HelloWorld/: main.lua
samples/2. HelloWorldMCML/: CMakeLists.txt  Run.bat  log.bat
samples/3. SampleWorld/: CMakeLists.txt  Run.bat
samples/4. SimpleWebServer/: CMakeLists.txt  Run.bat
samples/5. NPLWebServer/: CMakeLists.txt  README.md  main.lua  run.bat  update_packages.bat
samples/5. NPLWebServer/www/: index.page  webserver.config.xml
samples/5. NPLWebServer/www/app/: routes.page
samples/6. SimpleClientServer/: StartClient.bat  StartServer.bat
samples/HelloWorld/: Start.bat
samples/MonoSample.net/: CMakeLists.txt  MonoSample.net.sln  Run.bat
samples/MonoSample.net/NPLMonoInterface/: NPLMonoInterface.cs  NPLMonoInterface.csproj
samples/MonoSample.net/SampleMonoLib/: MyClass.cs  SampleMonoLib.csproj
samples/MonoSample.net/SampleMonoWinForm/: Form1.Designer.cs  Form1.cs  MainWindow.cs  SampleMonoWinForm.csproj
samples/MyAppExe/: CMakeLists.txt  MyApp.cpp  MyApp.h
samples/mod/: CMakeLists.txt
samples/mod/Sample/: .gitignore  CMakeLists.txt  InstallPackages.bat  ModProject.sln
samples/plugins/HelloWorldCppDll/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  HelloWorldPlugin.cpp  HelloWorldPlugin.def  HelloWorldPlugin.h  readme.txt  stdafx.h
src/: .gitignore  CMakeLists.txt  ParacraftSrc.sln  ParacraftSrc.vcxproj  ParacraftSrc.vcxproj.filters  readme.txt  sync_src.bat
src/include/ParaEngine/: AssetEntity.h  AssetManager.h  AttributeModelProxy.h  ContentLoaderCCSFace.h  ContentLoaderParaX.h  DynamicVertexBufferEntity.h  Events_def.h  IAttributeFields.h  INPLRuntimeState.h  IPCManager.h  IParaEngineApp.h  NPLInterface.hpp  NPLMiniRuntime.hpp  NPLTypes.h  PEtypes.h  ParaEngineAppBase.h  ParaPlatformConfig.h  ParaPlatformMacros.h  ParaWorldAsset.h  PluginAPI.h  PluginLoader.hpp  TextureEntity.h  UrlLoaders.h  coreexport.h
src/script/: config.lua
src/script/ide/: AI.lua  AssetPreloader.lua  AutoCompleteBox.lua  AutoCompleteList.lua  AutoHide.lua  ButtonStyles.lua  Canvas3D.lua  Canvas3DUI.lua  CanvasCamConfig.lua  CheckBox.lua  ContextMenu.lua  ContextMenu2.lua  DataBinding.lua  DateTime.lua  Dock.lua  DoubleView.lua  Encoding.lua  EventDispatcher.lua  ExternalInterface.lua  FileDialog.lua  FileExplorerCtrl.lua  FileLoader.lua  FileSystemWatcher.lua  FileViewCtrl.lua  Files.lua  FlashExternalInterface.lua  FlashPlayerControl.lua  FlashPlayerWindow.lua  GUI_inspector_simple.lua  Graph.lua  GraphHelp.lua  GridView.lua  GridView3D.lua  HTMLRenderer.lua  IDE.lua  Json.lua  KeyLineBox.lua  LibStub.lua  LoaderUI.lua  Locale.lua  (+82 more)
src/script/kids/: 3DMapSystem_Data.lua  3DMapSystem_Misc.lua  ParaWorldCore.lua  event_handlers.lua  pw_sandbox_file.lua
src/script/sqlite/: libluasqlite3-loader.lua  luasql-sqlite3.lua  lunit.lua  sqlite3.lua
tools/ParaEngine3dsmaxPlugin/3dsmax_9_exporter_32bits_dll/: ParaXExporterMax9_32bits.gup  readme.txt  目录说明.txt
tools/rebranding/: rebranding.md
tools/rebranding/BeijingUnionUniversity/: Run.bat  brand_installer.nsi  rebranding.txt
tools/script/PETools/: EntityTemplate.xml
(+1679 files in other folders)
